# fdb-swift-bindings

./: .gitignore  CMakeLists.txt  Package.resolved  Package.swift  README.md
.github/workflows/: ci.yml
Resources/: fdb_sample.cluster
Resources/docker/: entrypoint.bash
Sources/CFoundationDB/: CFoundationDB.c  fdb_c_wrapper.h
Sources/CFoundationDB/include/: CFoundationDB.h  CFoundationDB_linux.pc  CFoundationDB_mac.pc  module.modulemap
Sources/FoundationDB/: Client.swift  ClusterDatabaseConnection.swift  ClusterTransaction.swift  Database.swift  DatabaseConnection.swift  DatabaseValue.swift  DatabaseValueConversions.swift  Error.swift  Fdb+AsyncKVSequence.swift  Fdb+Options.swift  FoundationdDB.swift  Future.swift  FutureExtensions.swift  InMemoryDatabaseConnection.swift  InMemoryTransaction.swift  KeySelector.swift  Network.swift  Options.swift  PlatformShims.swift  ResultSet.swift  Transaction+Tuple.swift  Transaction.swift  Tuple.swift  TupleConstructors.swift  TupleConvertible.swift  TupleResultSet.swift  Types.swift
Sources/FoundationDBBindingTest/: Command.swift  PlatformShims.swift  StackMachine.swift
Sources/FoundationDBBindingTestRunner/: main.swift
Tests/: LinuxMain.swift
Tests/FoundationDBBindingTestTests/: CommandTests.swift  StackMachineTests.swift  TestHelpers.swift
Tests/FoundationDBTests/: ClusterDatabaseConnectionTests.swift  ClusterTransactionTests.swift  DatabaseConnectionTests.swift  DatabaseValueTests.swift  FoundationDBTests.swift  FoundationDBTupleTests.swift  InMemoryDatabaseConnectionTests.swift  InMemoryTransactionTests.swift  KeySelectorTests.swift  ResultSetTests.swift  TestHelpers.swift  TransactionTests.swift  TupleConvertibleTests.swift  TupleResultSetTests.swift  TupleTests.swift  TupleTransactionTests.swift
Tests/StackTester/Sources/StackTester/: StackTester.swift  main.swift
doc/: README.md  TODO.md  bindingApiTester.txt  directoryLayerTester.txt
scripts/: generate_options.py  vexillographer.py
